Criação do MVC das entidades

--- a/Empresa.Compras.Web/Views/Shared/_Layout.cshtml
+++ b/Empresa.Compras.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                     <li>@Html.ActionLink("Receitas", "Index", "Receitas")</li>
                     <li>@Html.ActionLink("DashBoard", "Index", "DashBoard")</li>*@
                     <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
+                    <li>@Html.ActionLink("Usuários", "Index", "Usuarios")</li>
                 </ul>
             </div>
         </div>
