--- a/Empresa.Compras.Web/Views/Fornecedores/Create.cshtml
+++ b/Empresa.Compras.Web/Views/Fornecedores/Create.cshtml
@@ -38,7 +38,7 @@
                 @Html.LabelFor(model => model.Email, new { @class = "control-label" })
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>*@
+            </div>
 
             <div class="panel-footer">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
