--- a/Empresa.Compras.Web/Views/Propostas/Confirmacao.cshtml
+++ b/Empresa.Compras.Web/Views/Propostas/Confirmacao.cshtml
@@ -54,7 +54,7 @@
                 url: url,
                 type: 'post',
                 dataType: 'json',
-                data: { idPropostas: id },
+                data: { idProposta: id },
 
                 beforeSend: function () { 
                     var loading = "<span><em>Excluindo</em>&nbsp;<i class='glyphicon glyphicon-refresh icon-refresh-animate'></i></span>";
