--- a/Empresa.Compras.Web/Views/Propostas/Index.cshtml
+++ b/Empresa.Compras.Web/Views/Propostas/Index.cshtml
@@ -10,57 +10,108 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4>Compras - Propostas</h4>
-    </div>
-    <div class="panel-body">
-        @Html.ActionLink("Nova proposta", "Create", "Propostas", new { @class = "btn btn-primary" })
+    </div>   
+        <div class="panel-body" id="divFiltro">
+            @Html.ActionLink("Nova proposta", "Create", "Propostas", new { @class = "btn btn-primary" })
 
-        <table class="table table-striped table-condensed table-bordered marginTop">
-            <thead>
-                <tr>                   
-                    <th class="text-center">Nome</th>
-                    <th class="text-center">Data proposta</th>
-                    <th class="text-center">Valor</th>
-                    <th class="text-center">Status</th>
-                    <th class="text-center">Fornecedor</th>
-                    <th class="text-center">Categoria</th>
-                    <th class="text-center">Excluir</th>
-                </tr>
-            </thead>
-
-            <tbody>
-
-            @foreach (var item in Model)
+            @using (Html.BeginForm("Index", "Propostas", FormMethod.Get))
             {
-                <tr id="row-@item.IdFornecedor">
-                    <td>
-                        @Html.ActionLink(item.Nome, "Edit", new { item.IdFornecedor })
+                <div class="panel-body" style="margin-top: 15px; border:solid; border-color: lightgray; border-radius:4px; border-width:1px">
+                    
+                    <div class="pull-left marginRight">
+                        @Html.Label("Nome Proposta")
+                        <input class="form-control text-box single-line" id="filtroNomeProposta" name="filtroNomeProposta" type="text" value="" style="width:150px" />
+                    </div>
+                    
+                    <div class="pull-left marginRight">
+                        @Html.Label("Fornecedor")
+                        @Html.DropDownList("filtroFornecedor", null, htmlAttributes: new { @class = "form-control", @style = "width:150px" })                       
+                    </div>
+                    
+                    <div class="pull-left marginRight">
+                        @Html.Label("Data Inicial")
+                        <input class="form-control text-box " id="filtroDataIni" name="filtroDataIni" type="text" value="" style="width:150px" onkeyup = formataData(this,event)/>
+                    </div>
+                    
+                    <div class="pull-left marginRight">
+                        @Html.Label("Data Finall")
+                        <input class="form-control text-box " id="filtroDataFim" name="filtroDataFim" type="text" value="" style="width:150px" onkeyup = formataData(this,event) />
+                    </div> 
+
+                    <div class="pull-left marginRight">
+                        @Html.Label("Status")
+                        @Html.DropDownList("filtroStatus", new List<SelectListItem>
+                        {
+                            new SelectListItem() {Text = "Aprovada", Value="Aprovada"},
+                            new SelectListItem() {Text = "Reprovada", Value="Reprovada"},
+                            new SelectListItem() {Text = "PendenteAnalise", Value="PendenteAnalise"},
+                            new SelectListItem() {Text = "Reprovada", Value="PendenteDiretoria"}
+
+                        }, "Status", new { @class = "form-control" })
+                    </div>
+
+                    <div class="pull-left marginRight">
+                        @Html.Label("Categoria")
+                        @Html.DropDownList("filtroCategoria", null, htmlAttributes: new { @class = "form-control", @style = "width:150px" })
+                    </div>                                   
+
+                    <div class="pull-left marginRight">
+                        <input type="submit" value="Filtrar" class="btn btn-default " />
+                    </div>
+                    
+                </div>                  
+            }
+
+            <table class="table table-striped table-condensed table-bordered marginTop">
+                <thead>
+                    <tr>
+                        <th class="text-center">Nome da Proposta</th>
+                        <th class="text-center">Categoria</th>
+                        <th class="text-center">Fornecedor</th>
+                        <th class="text-center">Data proposta</th>
+                        <th class="text-center">Valor</th>
+                        <th class="text-center">Status</th>
+                        <th class="text-center">Descrição</th>
+
+                        <th class="text-center">Excluir</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+
+                    @foreach (var item in Model)
+            {
+                        <tr id="row-@item.IdProposta">
+                            <td>
+                                @Html.ActionLink(item.Nome, "Edit", new { item.IdProposta })
+                            </td>
+                            <td class="text-left">
+                                @item.Categoria.Nome
+                            </td>
+                            <td class="text-left">
+                                @item.Fornecedor.Nome
+                            </td>
+                            <td class="text-center">
+                                @item.DataProposta.ToString("dd/MM/yyyy")
+                            </td>
+                            <td class="text-right">
+                                @item.ValorProposta.ToString("c")
+                            </td>
+                            <td class="text-center">
+                                @item.Status
+                            </td>
+                            <td class="text-left">
+                                @item.DescricaoGeral
                     </td>
-                    <td class="text-left">
-                        @item.Nome
-                    </td>
-                    <td class="text-center">
-                        @item.DataProposta
-                    </td>
-                    <td class="text-right">
-                        @item.ValorProposta
-                    </td>
-                    <td class="text-center">
-                        @item.Status
-                    </td>
-                    <td class="text-left">
-                        @item.Fornecedor.Nome
-                    </td>
-                    <td class="text-left">
-                        @item.Categoria.Nome
-                    </td>
+
                     <td class="text-center">
                         <input type="submit" class="btn btn-danger btn-xs" id="@item.IdProposta" name="@item.Nome" value="Excluir" />
                     </td>
                 </tr>
-            }
-            </tbody>
-        </table>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 
 @Html.Partial("Confirmacao")
