--- a/Empresa.Compras.Web/Views/Shared/_Layout.cshtml
+++ b/Empresa.Compras.Web/Views/Shared/_Layout.cshtml
@@ -20,19 +20,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Plátano - Financeiro", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Empresa - Compras", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Despesa Categorias", "Index", "DespesaCategoriaGrupos")</li>
-                    <li>@Html.ActionLink("Depesa Sub Categorias", "Index", "DespesaCategoria")</li>
-                    <li>@Html.ActionLink("Depesas", "Index", "Despesas")</li>
-                    <li>@Html.ActionLink("ReceitaGrupos", "Index", "ReceitaGrupos")</li>
-                    <li>@Html.ActionLink("Mensalistas", "Index", "Mensalistas")</li>
-                    <li>@Html.ActionLink("Receitas", "Index", "Receitas")</li>
-                    <li>@Html.ActionLink("DashBoard", "Index", "DashBoard")</li>*@
+                <ul class="nav navbar-nav">                   
                     <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
                     <li>@Html.ActionLink("Usuários", "Index", "Usuarios")</li>
+                    <li>@Html.ActionLink("Fornecedores", "Index", "Fornecedores")</li>
+                    <li>@Html.ActionLink("Propostas", "Index", "Propostas")</li>
                 </ul>
             </div>
         </div>
@@ -69,49 +64,3 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
-
-
-
-@*<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-</body>
-</html>*@
