--- a/Empresa.Compras.Web/Views/Usuarios/Create.cshtml
+++ b/Empresa.Compras.Web/Views/Usuarios/Create.cshtml
@@ -24,21 +24,20 @@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Cpf, new { @class = "control-label" })
-                @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control", @onkeyup = "formataCPF(this,event)", @maxlength = "14" } })
                 @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.DataNascimento, new { @class = "control-label" })
-                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
                 @Html.LabelFor(model => model.Perfil, new { @class = "control-label" })
-                @Html.EditorFor(model => model.Perfil, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Perfil, new List<SelectListItem>
+                {                
+                    new SelectListItem() {Text = "Analista de Compras", Value="compras"},
+                    new SelectListItem() {Text = "Analista Financeiro", Value="financeiro"},
+                    new SelectListItem() {Text = "Diretor Financeiro", Value="diretor"}
+                }, "Perfil", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Perfil, "", new { @class = "text-danger" })
-            </div>
+            </div>            
 
             <div class="panel-footer">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
