--- a/Empresa.Compras.Web/Views/Propostas/Confirmacao.cshtml
+++ b/Empresa.Compras.Web/Views/Propostas/Confirmacao.cshtml
@@ -28,7 +28,7 @@
 
         //Abrir Modal
 
-        $(".btn-xs").click(function (e) {
+        $(".delete").click(function (e) {
 
             e.preventDefault(); //Previne o comportamento padrão do botão
 
