--- a/Empresa.Compras.Web/Views/Propostas/Create.cshtml
+++ b/Empresa.Compras.Web/Views/Propostas/Create.cshtml
@@ -22,11 +22,11 @@
                 @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.DataProposta, "Data da  proposta", new { @class = "control-label" })
                 @Html.EditorFor(model => model.DataProposta, new { htmlAttributes = new { @class = "form-control", @onkeyup = "formataData(this,event)" } })
                 @Html.ValidationMessageFor(model => model.DataProposta, "", new { @class = "text-danger" })
-            </div>
+            </div>*@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.DescricaoGeral, "Descrição", new { @class = "control-label" })
@@ -38,24 +38,11 @@
                 @Html.LabelFor(model => model.ValorProposta, "Valor da proposta", new { @class = "control-label" })
                 @Html.EditorFor(model => model.ValorProposta, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ValorProposta, "", new { @class = "text-danger" })
-            </div>
-
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.Status, new { @class = "control-label" })               
-                @Html.DropDownListFor(model => model.Status, new List<SelectListItem>
-                {
-                    new SelectListItem() {Text = "Aprovada", Value="Aprovada"},
-                    new SelectListItem() {Text = "Reprovada", Value="Reprovada"},
-                    new SelectListItem() {Text = "PendenteAnalise", Value="PendenteAnalise"},
-                    new SelectListItem() {Text = "Reprovada", Value="PendenteDiretoria"}
-
-                }, "Status", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-            </div>*@          
+            </div>            
 
             <div class="form-group">
                 @Html.Label("Fornecedor", new { @class = "control-label" })
-                @Html.DropDownList("IdFornecedor", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.IdFornecedor, ViewBag.IdFornecedor as IEnumerable<SelectListItem>, "", new { @class = "form-control" })                
                 @Html.ValidationMessageFor(model => model.Fornecedor, "", new { @class = "text-danger" })
             </div>
 
@@ -65,12 +52,6 @@
                 
                 @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })                
             </div>
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.Categoria, new { @class = "control-label" })
-                @Html.EditorFor(model => model.Categoria, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
-            </div>*@
-
 
             <div class="panel-footer">
                 <input type="submit" value="Salvar" class="btn btn-primary" />
