--- a/Empresa.Compras.Web/Views/Propostas/Index.cshtml
+++ b/Empresa.Compras.Web/Views/Propostas/Index.cshtml
@@ -10,108 +10,132 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4>Compras - Propostas</h4>
-    </div>   
-        <div class="panel-body" id="divFiltro">
-            @Html.ActionLink("Nova proposta", "Create", "Propostas", new { @class = "btn btn-primary" })
+    </div>
+    <div class="panel-body" id="divFiltro">
+        @Html.ActionLink("Nova proposta", "Create", "Propostas", new { @class = "btn btn-primary" })
 
-            @using (Html.BeginForm("Index", "Propostas", FormMethod.Get))
+        @using (Html.BeginForm("Index", "Propostas", FormMethod.Get))
             {
-                <div class="panel-body" style="margin-top: 15px; border:solid; border-color: lightgray; border-radius:4px; border-width:1px">
-                    
-                    <div class="pull-left marginRight">
-                        @Html.Label("Nome Proposta")
-                        <input class="form-control text-box single-line" id="filtroNomeProposta" name="filtroNomeProposta" type="text" value="" style="width:150px" />
-                    </div>
-                    
-                    <div class="pull-left marginRight">
-                        @Html.Label("Fornecedor")
-                        @Html.DropDownList("filtroFornecedor", null, htmlAttributes: new { @class = "form-control", @style = "width:150px" })                       
-                    </div>
-                    
-                    <div class="pull-left marginRight">
-                        @Html.Label("Data Inicial")
-                        <input class="form-control text-box " id="filtroDataIni" name="filtroDataIni" type="text" value="" style="width:150px" onkeyup = formataData(this,event)/>
-                    </div>
-                    
-                    <div class="pull-left marginRight">
-                        @Html.Label("Data Finall")
-                        <input class="form-control text-box " id="filtroDataFim" name="filtroDataFim" type="text" value="" style="width:150px" onkeyup = formataData(this,event) />
-                    </div> 
+            <div class="panel-body" style="margin-top: 15px; border:solid; border-color: lightgray; border-radius:4px; border-width:1px">
 
-                    <div class="pull-left marginRight">
-                        @Html.Label("Status")
-                        @Html.DropDownList("filtroStatus", new List<SelectListItem>
+                <div class="pull-left marginRight">
+                    @Html.Label("Nome Proposta")
+                    <input class="form-control text-box single-line" id="filtroNomeProposta" name="filtroNomeProposta" type="text" value="" style="width:150px" />
+                </div>
+
+                <div class="pull-left marginRight">
+                    @Html.Label("Fornecedor")
+                    @Html.DropDownList("filtroFornecedor", null, "", htmlAttributes: new { @class = "form-control", @style = "width:150px" })
+                </div>
+
+                <div class="pull-left marginRight">
+                    @Html.Label("Data Inicial")
+                    <input class="form-control text-box " id="filtroDataIni" name="filtroDataIni" type="datetime" value="" style="width:150px" onkeyup=formataData(this,event) />
+                </div>
+
+                <div class="pull-left marginRight">
+                    @Html.Label("Data Final")
+                    <input class="form-control text-box " id="filtroDataFim" name="filtroDataFim" type="datetime" value="" style="width:150px" onkeyup=formataData(this,event) />
+                </div>
+
+                <div class="pull-left marginRight">
+                    @Html.Label("Status")
+                    @Html.DropDownList("filtroStatus", new List<SelectListItem>
                         {
                             new SelectListItem() {Text = "Aprovada", Value="Aprovada"},
                             new SelectListItem() {Text = "Reprovada", Value="Reprovada"},
                             new SelectListItem() {Text = "PendenteAnalise", Value="PendenteAnalise"},
                             new SelectListItem() {Text = "Reprovada", Value="PendenteDiretoria"}
 
-                        }, "Status", new { @class = "form-control" })
-                    </div>
+                        }, "", new { @class = "form-control" })
+                </div>
 
-                    <div class="pull-left marginRight">
-                        @Html.Label("Categoria")
-                        @Html.DropDownList("filtroCategoria", null, htmlAttributes: new { @class = "form-control", @style = "width:150px" })
-                    </div>                                   
+                <div class="pull-left marginRight">
+                    @Html.Label("Categoria")
+                    @Html.DropDownList("filtroCategoria", null, "", htmlAttributes: new { @class = "form-control", @style = "width:150px" })
+                </div>
 
-                    <div class="pull-left marginRight">
-                        <input type="submit" value="Filtrar" class="btn btn-default " />
-                    </div>
-                    
-                </div>                  
-            }
+                <div class="pull-left marginRight">
+                    <input type="submit" value="Filtrar" class="btn btn-default " />
+                </div>
 
-            <table class="table table-striped table-condensed table-bordered marginTop">
-                <thead>
-                    <tr>
-                        <th class="text-center">Nome da Proposta</th>
-                        <th class="text-center">Categoria</th>
-                        <th class="text-center">Fornecedor</th>
-                        <th class="text-center">Data proposta</th>
-                        <th class="text-center">Valor</th>
-                        <th class="text-center">Status</th>
-                        <th class="text-center">Descrição</th>
+            </div>
+        }
 
-                        <th class="text-center">Excluir</th>
-                    </tr>
-                </thead>
+        <table class="table table-striped table-condensed table-bordered marginTop">
+            <thead>
+                <tr>
+                    <th class="text-center">Nome da Proposta</th>
+                    <th class="text-center">Categoria</th>
+                    <th class="text-center">Fornecedor</th>
+                    <th class="text-center">Data proposta</th>
+                    <th class="text-center">Valor</th>
+                    <th class="text-center">Status</th>
+                    <th class="text-center">Descrição</th>
 
-                <tbody>
-
-                    @foreach (var item in Model)
-            {
-                        <tr id="row-@item.IdProposta">
-                            <td>
-                                @Html.ActionLink(item.Nome, "Edit", new { item.IdProposta })
-                            </td>
-                            <td class="text-left">
-                                @item.Categoria.Nome
-                            </td>
-                            <td class="text-left">
-                                @item.Fornecedor.Nome
-                            </td>
-                            <td class="text-center">
-                                @item.DataProposta.ToString("dd/MM/yyyy")
-                            </td>
-                            <td class="text-right">
-                                @item.ValorProposta.ToString("c")
-                            </td>
-                            <td class="text-center">
-                                @item.Status
-                            </td>
-                            <td class="text-left">
-                                @item.DescricaoGeral
-                    </td>
-
-                    <td class="text-center">
-                        <input type="submit" class="btn btn-danger btn-xs" id="@item.IdProposta" name="@item.Nome" value="Excluir" />
-                    </td>
+                    <th class="text-center">Excluir</th>
+                    <th class="text-center">PDF</th>
                 </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
+            </thead>
+
+            <tbody>
+
+                @foreach (var item in Model)
+                {
+                    <tr id="row-@item.IdProposta">
+                        <td>
+                            @Html.ActionLink(item.Nome, "Edit", new { item.IdProposta })
+                        </td>
+                        <td class="text-left">
+                            @item.Categoria.Nome
+                        </td>
+                        <td class="text-left">
+                            @item.Fornecedor.Nome
+                        </td>
+                        <td class="text-center">
+                            @item.DataProposta.ToString("dd/MM/yyyy")
+                        </td>
+                        <td class="text-right">
+                            @item.ValorProposta.ToString("c")
+                        </td>
+                        <td class="text-center">
+                            @item.Status
+                        </td>
+                        <td class="text-left">
+                            @item.DescricaoGeral
+                        </td>
+
+                        <td class="text-center">
+                            <input type="submit" class="btn btn-danger btn-xs delete" id="@item.IdProposta" name="@item.Nome" value="Excluir" />
+                        </td>
+                        <td class="text-center">
+                            <input type="submit" class="btn btn-info btn-xs pdf" id="@item.IdProposta" name="@item.Nome" value="PDF" />
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
+</div>
 
 @Html.Partial("Confirmacao")
+
+<script>
+$(function () {
+    $(".pdf").click(function (e) {
+        e.preventDefault();
+
+        var url = "/Propostas/GerarPdfProposta/";
+        var id = this.id;
+        //var id = $(".modal-body input[type=hidden]").val();
+        //var rowNo = "#row-" + id;
+
+        $.ajax({
+            url: url,
+            type: 'post',
+            dataType: 'json',
+            data: { idProposta: id }
+        });
+    });
+});
+</script>
